crud tables styles

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -14,14 +14,14 @@
 
 
     <!-- SCREEN -->
-    <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/publico/pantalla">
+    <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/public/screen">
         <mat-icon class="sidenav-button-icons">input</mat-icon>
         <span class="sidenav-button-text">Pantalla</span>
     </div>
 
 
     <!-- TICKETS -->
-    <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/publico/turnos">
+    <div class="sidenav-button m-0 p-1 px-3 mr-4" style="text-align: left;" routerLink="/public/tickets">
         <mat-icon class="sidenav-button-icons">turned_in</mat-icon>
         <span class="sidenav-button-text">Turnos</span>
     </div>
