--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="turnos-toolbar mat-elevation-z2">
+<mat-toolbar color="primary" class="tickets-toolbar mat-elevation-z2">
     <mat-toolbar-row>
 
         <!-- Menu -->
