--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
         extra para asistir a la ventanilla.
       </p>
 
-      <a class="btn btn-primary btn-lg" routerLink="/publico" role="button">TURNOS</a>
+      <a class="btn btn-primary btn-lg" routerLink="/public" role="button">TURNOS</a>
     </div>
 
   </div>
