--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -93,7 +93,7 @@
                     Turno
                 </div>
 
-                <div class="d-flex justify-content-center ticket-secundario-escritorio  text-white" style="width: 50%">
+                <div class="d-flex justify-content-center text-white" style="width: 50%">
                     Escritorio
                 </div>
 
