--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -4,7 +4,7 @@
         <div class="jumbotron m-2">
             <h1 class="display-4">Ingrese la empresa</h1>
             <p class="p-2" style="background-color: whitesmoke; border-radius: .2rem;">Puede utilizar el buscador o ingresar directamente a la empresa ingresando a su web pública
-                por ejemplo:<br> <b>webturnos.herokuapp.com/laempresa</b>
+                por ejemplo:<br> <b>webturnos.herokuapp.com/public/thecompany</b>
             </p>
             <hr class="my-4">
             <div class="my-2">
@@ -15,7 +15,7 @@
                     <span class="input-icon"><i class="mdi mdi-close"></i></span>
                 </mat-form-field>
             </div>
-            <button class="btn btn-success" (click)="findCompany(inputCompany)">Buscar</button>
+            <button class="btn btn-success btn-lg btn-block" (click)="findCompany(inputCompany)">Buscar</button>
 
         </div>
 
