--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -71,9 +71,9 @@
   </div>
   <!-- ACTION BUTTONS -->
   <div class="col-lg-6">
-    <div class="card text-white bg-danger mb-4">
+    <div class="card bg-light mb-4">
       <div class="card-header banner-title"> Panel </div>
-      <div class="banner-content" style="background-color: rgb(141, 51, 51)">
+      <div class="banner-content">
 
         <div class="container">
           <div class="row py-2">
