--- a/src/app/pages/user/skills/skills.component.html
+++ b/src/app/pages/user/skills/skills.component.html
@@ -2,17 +2,21 @@
 
     <div class="card bg-danger lead text-white">
         <div class="card-header">Skills</div>
-        <div class="card-body card-turnos-danger">
-            <div class="my-2" *ngFor="let skill of skills">
-                <span> {{skill?.cd_skill}} </span>
-                <span style="font-size: small;"> [ {{skill?.tx_skill}} ] </span>
-                <span style="float: right;">
-                    <mat-icon class="ml-2 list-crud-edit" (click)="editSkill(skill._id)">edit</mat-icon>
-                    <mat-icon class="ml-2 list-crud-delete" (click)="deleteSkill(skill._id)">delete</mat-icon>
-                </span>
-            </div>
+        <div class="card-body card-tickets-info table-responsive-sm">
+
+            <table class="table table-sm text-white">
+                <tr *ngFor="let skill of skills">
+                    <td> {{skill?.cd_skill}} </td>
+                    <td> {{skill?.tx_skill}} </td>
+                    <td style="text-align: right;">
+                        <mat-icon class="ml-2 list-crud-edit" (click)="editSkill(skill._id)">edit</mat-icon>
+                        <mat-icon class="ml-2 list-crud-delete" (click)="deleteSkill(skill._id)">delete</mat-icon>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
+
 
     <div class="my-4"></div>
 
