--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -15,7 +15,7 @@
         <div *ngIf="!loading">
 
           <p class="lead">
-            Usted esta por sacar un turno para ser atendido en
+            ¡Bienvenido! Usted esta por sacar un turno para ser atendido en
           </p>
 
           <div class="card border-success py-4 my-4">
