--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,13 @@ input:focus { outline: none; }
 div:focus { outline: none; }
 
 
+/* banner company search & welcome */
+.text-company {
+    color: darkred; 
+    font-size: 2.5rem; 
+    line-height: 2rem;
+    font-weight: 400; 
+}
 
 /* cruds */
 .list-crud-delete{
