--- a/src/app/pages/user/home-user/home-user.component.html
+++ b/src/app/pages/user/home-user/home-user.component.html
@@ -9,7 +9,7 @@
 
       </p>
 
-      <a class="btn btn-primary btn-lg btn-block" routerLink="/public" role="button">TURNOS</a>
+      <a class="btn btn-primary btn-lg btn-block" routerLink="/assistant/home" role="button">Inicio</a>
     </div>
 
   </div>
