--- a/src/app/pages/user/skills/skills.component.html
+++ b/src/app/pages/user/skills/skills.component.html
@@ -1,30 +1,35 @@
-<div class="m-4 animated fadeIn">
+<div class="turno-container p-4" style="text-align: -webkit-center;">
+    <div class="card bg-light mb-3" style="min-width: 18rem; max-width: 30rem;">
+        <div class="m-4 animated fadeIn">
 
-    <div class="card bg-danger lead text-white">
-        <div class="card-header">Skills</div>
-        <div class="card-body card-tickets-info table-responsive-sm">
+            <div class="card bg-danger lead text-white">
+                <div class="card-header">Skills</div>
+                <div class="card-body card-tickets-info table-responsive-sm">
 
-            <table class="table table-sm text-white">
-                <tr *ngFor="let skill of skills">
-                    <td> {{skill?.cd_skill}} </td>
-                    <td> {{skill?.tx_skill}} </td>
-                    <td style="text-align: right;">
-                        <mat-icon class="ml-2 list-crud-edit" (click)="editSkill(skill._id)">edit</mat-icon>
-                        <mat-icon class="ml-2 list-crud-delete" (click)="deleteSkill(skill._id)">delete</mat-icon>
-                    </td>
-                </tr>
-            </table>
+                    <table class="table table-sm text-white">
+                        <tr *ngFor="let skill of skills">
+                            <td> {{skill?.cd_skill}} </td>
+                            <td> {{skill?.tx_skill}} </td>
+                            <td style="text-align: right;">
+                                <mat-icon class="ml-2 list-crud-edit" (click)="editSkill(skill._id)">edit</mat-icon>
+                                <mat-icon class="ml-2 list-crud-delete" (click)="deleteSkill(skill._id)">delete
+                                </mat-icon>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+
+            <div class="my-4"></div>
+
+            <div class="card lead">
+                <div class="card-header">Alta de Skills</div>
+                <div class="card-body">
+                    <app-skill-create-form (skillCreated)="skillCreated($event)"></app-skill-create-form>
+                </div>
+            </div>
+
         </div>
     </div>
-
-
-    <div class="my-4"></div>
-
-    <div class="card lead">
-        <div class="card-header">Alta de Skills</div>
-        <div class="card-body">
-            <app-skill-create-form (skillCreated)="skillCreated($event)"></app-skill-create-form>
-        </div>
-    </div>
-
 </div>
