--- a/src/app/pages/public/tickets/tickets.component.html
+++ b/src/app/pages/public/tickets/tickets.component.html
@@ -37,6 +37,7 @@
           (click)="nuevoTicket(skill._id, skill.cd_skill)">
           {{skill.tx_skill}}
         </button>
+        <button class="btn btn-info btn-lg btn-block" routerLink='/public/screen'>Pantalla</button>
 
         <button class="btn btn-danger btn-block btn-lg" (click)="salir()">Salir</button>
       </div>
